2003-03-16  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: typo

2003-03-16  John Levon  <levon@movementarian.org>

	* configure.in: more docbook macro fixes

2003-03-15  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_libiberty.h: cut&paste typo breaking compilation on box
	  w/o libiberty.h

	* daemon/opd_image.c: remove bogus fprintf. compilation was broken
	  on alpha.

	* configure.in: xsltproc checking fix, was always accepted even
	 on box where xsltproc is not installed

2003-03-15  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: upate

	* Makefile.am: add ChangeLog-2002 in dist files
	* all Makefile.am: put one item by line for most  xxxx = blah
	* doc/CodingStyle: rationale for the above change

2003-03-15  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_events.c: minor cleanup

2003-03-15  Dave Jones <davej@codemonkey.org.uk>

	* module/x86/op_nmi.c: Remove stale debug code from yesterdays commit.

2003-03-15  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: add checking for existence of xmemdup()

	* libutil/Makefile.am:
	* libutil/op_string.h:
	* libutil/op_string.c: new, a few C string handling function

	* libutil/op_libiberty.h:
	* libutil/op_libiberty.c: xmemdup() new.

	* libop/op_events.h:
	* libop/op_events.c: tidy parser. Add op_free_events(). Fix minor
	  buglet.

	* dae/oprofiled.c:
	* daemon/oprofiled.c: fix memleak from parsing events files

	* gui/Makefile.am:
	* pp/Makefile.am: fix lib ordering, now libop depend on libutil

	* utils/op_help.c: error message if invalid cpu type. Fix op_help
	  when using timer interrupt.

2003-03-14  Andi Kleen <ak@suse.de>

	* module/x86/op_nmi.c: Fix another possible race condition.

2003-03-14  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* libregex/stl.pat: support for rb tree, set/map, anonymous namespace.
	  Fix incorrect pattern for gcc 3.2. Handle 2.95 vector/string
	  iterator and a few stl free function handling. add all C++ base type.